# jupyter-api-rs

./: .gitignore  Cargo.toml  README.md  pyproject.toml  start_jupyterlab.py  test.py
.github/workflows/: ci.yml
samples/: [GET]contents.json  [GET]kernels.json  [GET]kernelspecs.json  [GET]lab__workspaces.json  [GET]me.json  [GET]sessions.json  [GET]status.json  [GET]terminals.json
src/: fs.rs  ftp.rs  lib.rs  main.rs  state.rs  structs.rs
src/api/: client.rs  jupyter.rs  mod.rs  param.rs  resp.rs
src/cli/: ftp.rs  mod.rs  scp.rs  ssh.rs
src/services/: fs.rs  terminal.rs
src/structs/: mod.rs  param.rs
tmp/: Untitled.ipynb
