[package]
name = "jupyter_shell"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
reqwest = { version = "0.12.26", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros"] }
base64 = "0.21.7"
sha2 = "0.10.8"
uuid = { version = "1.19.0", features = ["serde"] }
async-trait = "0.1.89"
libunftp = "0.21.0"
